# netschoolpy

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml  test2.py  test_full.py  test_qr_login.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
advanced/: index.html
api/: index.html
docs/: advanced.md  api.md  esia_login.md  guide.md  index.md  models.md
esia_login/: index.html
examples/: basic_diary.py  calc_average.py  download_attachments.py  login_esia.py  login_methods.py  login_password.py  login_qr.py  mail.py  search_school.py
guide/: index.html
models/: index.html
netschoolpy/: __init__.py  client.py  exceptions.py  http.py  models.py
search/: search_index.json
tests/: test_client.py  test_models.py  test_regions.py  test_session_store.py
